@@ -64,7 +64,8 @@ block content
             pre
     .navbar.navbar-fixed-bottom.navbar-inverse
       .navbar-inner
-        div.editor-version Adafruit WebIDE v#{version}
+        div.editor-version Adafruit WebIDE v#{version} / 
+          a(href="https://github.com/adafruit/Adafruit-WebIDE/issues", class="", target="_blank") Report Bug
         div.schedule-footer
           span.schedule-status Scheduler Active
           a(href="", class="schedule-manager-link") Schedule Manager
